@@ -46,6 +46,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #25935: Garbage collector now breaks reference loops with OrderedDict.
+
 - Issue #16620: Fixed AttributeError in msilib.Directory.glob().
 
 - Issue #26013: Added compatibility with broken protocol 2 pickles created
